--- a/sample/src/main/res/layout/activity_main.xml
+++ b/sample/src/main/res/layout/activity_main.xml
@@ -5,6 +5,7 @@
     android:padding="@dimen/fragment_vertical_margin"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+
     <Button
         android:id="@+id/button_pairing_key"
         android:layout_gravity="center"
@@ -56,6 +57,11 @@
         android:layout_gravity="center_horizontal"
         android:text="@string/button_qr_authentication"/>
 
+    <Button android:id="@+id/button_passkeys"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:text="@string/button_passkeys"/>
     <TextView
         android:id="@+id/text_view_app_version"
         android:layout_width="wrap_content"
