--- a/sample/src/main/res/layout/fragment_passkeys_main.xml
+++ b/sample/src/main/res/layout/fragment_passkeys_main.xml
@@ -9,6 +9,7 @@
         android:id="@+id/button_sign_in_passkeys"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="320dp"
         android:gravity="center"
         android:text="@string/sign_in"
         app:layout_constraintLeft_toLeftOf="parent"
